# Trabecula

./: .gitignore  CMakeLists.txt  LICENSE  README.md  msvc.cmk
code/: CMakeLists.txt
code/TrabeLab/: CMakeLists.txt
code/TrabeLab/include/: precomp.h
code/TrabeLab/include/app/: TrabeApp.h
code/TrabeLab/include/view/: TrabeImageCtrl.h  TrabeLabelCtrl.h
code/TrabeLab/include/window/: ImageCtrl.h  MainWindow.h
code/TrabeLab/include/window/sinks/: MainWindowCommandSink.h  MainWindowPropertySink.h
code/TrabeLab/include/window/states/: AddState.h  EraseState.h  MeasureState.h  NoPicState.h  RepairState.h  RubberState.h  RulerState.h  StartState.h  StateDef.h
code/TrabeLab/rc/: TrabeLab.rc  resource.h
code/TrabeLab/src/: main.cpp
code/others/ETL/include/: msvc.cmk
code/others/ETL/third/ATL/include/: atlbuild.h  atlcom.h  cstringt.h
code/others/etl/: etlbase.h
code/others/etl/imp/: ImageData.h
code/others/etl/include/: etlbase.h
code/others/etl/include/imp/: ImageData.h  ImageProcess.h
code/others/etl/include/ui/: ImageCtrl.h  LabelCtrl.h
code/others/etl/ui/: ImageCtrl.h
code/utility/alg/: TrabeAlg.h  TrabeImageData.h
code/utility/model/: TrabeDataModel.h
code/utility/viewmodel/: TrabeViewModel.h
code/utility/viewmodel/commands/: CalcCommand.h  ClearCommand.h  ClearSegmentCommand.h  DilateCommand.h  EraseCommand.h  ErodeCommand.h  FilterCommand.h  LoadCommand.h  MeasureCommand.h  RepairCommand.h  RubberCommand.h  SaveCommand.h  ShowPixelCommand.h  StartSegmentCommand.h
code/utility/viewmodel/sinks/: TrabeViewModelSink.h
doc/requirement/: requirement.md
doc/technology/: techniques.md
manual/: manual.md
