CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
INCLUDE("code/others/etl/include/msvc.cmk")

PROJECT(Trabecula)
ADD_SUBDIRECTORY(code code)

#pack
SET(CPACK_RESOURCE_FILE_LICENSE "${PROJECT_SOURCE_DIR}/LICENSE")

SET(CPACK_PACKAGE_NAME "Trabecula")

SET(CPACK_PACKAGE_VENDER "ZCMU-ZJU")

SET(CPACK_PACKAGE_DIRECTORY "${PROJECT_BINARY_DIR}/_pack")

SET(CPACK_PACKAGE_VERSION_MAJOR "1")

SET(CPACK_PACKAGE_VERSION_MINOR "0")

SET(CPACK_PACKAGE_VERSION_PATCH "1")

INCLUDE(CPack)

#end
