CMAKE_MINIMUM_REQUIRED(VERSION 3.14)
INCLUDE("code/others/ETL/include/msvc.cmk")

PROJECT(Trabecula)

SET_ETL_PATH("${PROJECT_SOURCE_DIR}/code/others/ETL")

ADD_SUBDIRECTORY(code code)

#pack
SET(CPACK_RESOURCE_FILE_LICENSE "${PROJECT_SOURCE_DIR}/LICENSE")

SET(CPACK_PACKAGE_NAME "Trabecula")

SET(CPACK_PACKAGE_VENDER "ZCMU-ZJU")

SET(CPACK_PACKAGE_DIRECTORY "${PROJECT_BINARY_DIR}/_pack")

SET(CPACK_PACKAGE_VERSION_MAJOR "1")

SET(CPACK_PACKAGE_VERSION_MINOR "0")

SET(CPACK_PACKAGE_VERSION_PATCH "2")

INCLUDE(CPack)

#end
