INCLUDE_DIRECTORIES(
	"${CMAKE_CURRENT_BINARY_DIR}"
	"${CMAKE_CURRENT_SOURCE_DIR}"
	"${PROJECT_SOURCE_DIR}/code/TrabeLab/include"
	"${PROJECT_SOURCE_DIR}/code/others/wtl/include"
	)
SET(EXECUTABLE_OUTPUT_PATH "${PROJECT_BINARY_DIR}/bin")
SET(SRC_LIST "src/main.cpp")
ADD_EXECUTABLE(TrabeLab ${SRC_LIST})
SET_TARGET_PROPERTIES(TrabeLab PROPERTIES OUTPUT_NAME "TrabeLab"
	LINK_FLAGS "${STRING_LINK_FLAGS_TARGET_W}")
