INCLUDE_DIRECTORIES(
	"${CMAKE_CURRENT_BINARY_DIR}"
	"${CMAKE_CURRENT_SOURCE_DIR}"
	"${PROJECT_SOURCE_DIR}/code/TrabeLab/include"
	"${PROJECT_SOURCE_DIR}/code/utility"
	"${PROJECT_SOURCE_DIR}/code/others/atl/include"
	"${PROJECT_SOURCE_DIR}/code/others/wtl/include"
	"${PROJECT_SOURCE_DIR}/code/others/etl/include"
	)
LINK_DIRECTORIES(
	"${PROJECT_SOURCE_DIR}/code/others/atl/lib/x64"
	)
SET(EXECUTABLE_OUTPUT_PATH "${PROJECT_BINARY_DIR}/bin")
SET(SRC_LIST "src/main.cpp")
ADD_EXECUTABLE(TrabeLab ${SRC_LIST})
SET_TARGET_PROPERTIES(TrabeLab PROPERTIES OUTPUT_NAME "TrabeLab"
	LINK_FLAGS "${STRING_LINK_FLAGS_TARGET_W}")

#pack
INSTALL(TARGETS TrabeLab

	RUNTIME DESTINATION bin COMPONENT runtime
)


INSTALL(DIRECTORY "${PROJECT_SOURCE_DIR}/code/others/redist/x64/Release/"

	DESTINATION bin COMPONENT runtime

	CONFIGURATIONS Release)
